笨海豹說他比較喜歡 §

--- a/server/email.html
+++ b/server/email.html
@@ -1,10 +1,10 @@
 <html>
     <head></head>
     <body>
-        <h3>{{user}} 君 您好:</h3>
+        <h3>§user§ 君 您好:</h3>
         <p>
             &nbsp;&nbsp;&nbsp;&nbsp;我們是 <a href="https://breach.tw">breach.tw</a> 台灣抓漏小天使團隊。<br>
-            在最近的資料庫更新中，我們發現您的使用者資訊已被<font color="#FF0000">{{source}} </font>洩漏，太慘了：（<br>
+            在最近的資料庫更新中，我們發現您的使用者資訊已被<font color="#FF0000">§source§ </font>洩漏，太慘了：（<br>
             提醒您，平時應做好基本的資安防護措施，並慎選個資提供對象。
             若需要法律協助，可諮詢<a href="https://www.laf.org.tw">法律扶助基金會</a>。
             請節哀順變，並祝您仕途順利、學業進步、事事順心。
